[package]
name = "xtream-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }

#[lib]
#name = "xtream_connection"
#path = "src/xtream_connection/mod.rs"
